--- a/VRChat/47/1379347.html
+++ b/VRChat/47/1379347.html
@@ -4,7 +4,7 @@
     <link href="/manifest.json" rel="manifest">
     <meta charset="utf-8">
     <title>
-      【終了】短冊大募集 - #YUINOESTORE - BOOTH
+      【終了】短冊大募集 - YUINOE STORE - BOOTH
     </title>
     <meta name="description" content=
     "●2019.06.16追記 短冊の募集は終了しました。DLありがとうございました。 --- こなふりゅんさんが作成しているPublic申請中の七夕ワールドに飾る短冊を書いてくれる方を募集しているそうです！ ちょっとした短冊のテンプレートを作ったので無料配布します。 短冊を書いて@Draining_KissHSへリプかDMで送りましょう！ このテンプレートの使用は任意です。サイズ以外の改変も自由とします。 詳細はこちら（こなふりゅんさんのツイート） https://twitter.com/Draining_KissHS/status/1127510909956513792">
@@ -14,14 +14,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【終了】短冊大募集 - #YUINOESTORE - BOOTH">
+    "【終了】短冊大募集 - YUINOE STORE - BOOTH">
     <meta name="twitter:description" content=
     "●2019.06.16追記 短冊の募集は終了しました。DLありがとうございました。 --- こなふりゅんさんが作成しているPublic申請中の七夕ワールドに飾る短冊を書いてくれる方を募集しているそうです！ ちょっとした短冊のテンプレートを作ったので無料配布します。 短冊を書いて@Draining_KissHSへリプかDMで送りましょう！ このテンプレートの使用は任意です。サイズ以外の改変も自由とします。 詳細はこちら（こなふりゅんさんのツイート） https://twitter.com/Draining_KissHS/status/1127510909956513792">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1379347/8b88d15a-7b0c-45ab-b65d-ccaa552d498b_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【終了】短冊大募集 - #YUINOESTORE - BOOTH">
+    "【終了】短冊大募集 - YUINOE STORE - BOOTH">
     <meta property="og:description" content=
     "●2019.06.16追記 短冊の募集は終了しました。DLありがとうございました。 --- こなふりゅんさんが作成しているPublic申請中の七夕ワールドに飾る短冊を書いてくれる方を募集しているそうです！ ちょっとした短冊のテンプレートを作ったので無料配布します。 短冊を書いて@Draining_KissHSへリプかDMで送りましょう！ このテンプレートの使用は任意です。サイズ以外の改変も自由とします。 詳細はこちら（こなふりゅんさんのツイート） https://twitter.com/Draining_KissHS/status/1127510909956513792">
     <meta property="og:image" content=
@@ -104,9 +104,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "B90SEfNOa1AK3DUJMVP4MRoihMwKcMrH4acoHKuriqs="></script>
+    "HlvOMXW+yh110jpGuohv1OldRzYjDwLQZvOkUfh7HqU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【終了】短冊大募集","description":"●2019.06.16追記\n短冊の募集は終了しました。DLありがとうございました。\n---\nこなふりゅんさんが作成しているPublic申請中の七夕ワールドに飾る短冊を書いてくれる方を募集しているそうです！\n\nちょっとした短冊のテンプレートを作ったので無料配布します。\n短冊を書いて@Draining_KissHSへリプかDMで送りましょう！\n\nこのテンプレートの使用は任意です。サイズ以外の改変も自由とします。\n\n詳細はこちら（こなふりゅんさんのツイート）\nhttps://twitter.com/Draining_KissHS/status/1127510909956513792\n\n2019.05.20許諾済み\n\nYUINOE STOREで提供及び記載されているすべてのコンテンツの無断転載・複製を固く禁じます。","url":"https://booth.pm/ja/items/1379347","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1379347/8b88d15a-7b0c-45ab-b65d-ccaa552d498b_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="B90SEfNOa1AK3DUJMVP4MRoihMwKcMrH4acoHKuriqs="></script>
+    nonce="HlvOMXW+yh110jpGuohv1OldRzYjDwLQZvOkUfh7HqU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -167,9 +167,10 @@
                             data-tracking="click" target="_blank"
                             rel="noopener" href=
                             "https://yui-noe.booth.pm/"><img alt=
-                            "#YUINOESTORE" class=
+                            "YUINOE STORE" class=
                             "h-[24px] rounded-oval w-[24px]" src=
-                            "https://booth.pximg.net/c/48x48/users/5080392/icon_image/6bfb8f2d-3823-4fb5-9ba7-c328510bb076_base_resized.jpg">#YUINOESTORE</a>
+                            "https://booth.pximg.net/c/48x48/users/5080392/icon_image/6bfb8f2d-3823-4fb5-9ba7-c328510bb076_base_resized.jpg">YUINOE
+                            STORE</a>
                             <h2 class=
                             "font-bold leading-[32px] m-0 text-[24px]">
                               【終了】短冊大募集
@@ -589,7 +590,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
