--- a/VRChat/62/1376862.html
+++ b/VRChat/62/1376862.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "dJoRjORd+i9HYyLFXlbR/PCQSOZjw1tsrukcpJuu0zg="></script>
+    "QpumxvP5RaMMqfbWWK4zAEI4rZQ1mcooIYO8GmxXfCc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"「兎月くん」 Ver1.1　オリジナル3Dモデル","description":"アバター3.0は非対応です。\n現在更新を停止しています。\n\n\n\nネザーランド・ドワーフの男の子です。\nショタはイイぞ～！！\n\n\n\n※本モデルは、事前にVRC_SDKの導入が必要です。\n※「UnityChanToonShaderVer2_Project_v.2.0.6」が再配布の形で同封されています。\n（© Unity Technologies Japan/UCL）\n\n※ダイナミックボーンについて\n　　なくても構いませんが、耳等を動かしたい方は事前に導入してください。\n\n仕様\n\n・ポリゴン数：18463ポリゴン\n・リップシンク15種類\n・表情アニメーション6種類\n・自動まばたき\n・フルトラッキング対応\n\n\nセット内容\n\n・Unity package\n　　Animation\n　　Materials\n　　UnityChanToonShaderVer2_Project_v.2.0.6\n　　ﾃｸｽﾁｬ\n　　兎月くんVer1.0\n　　　　兎月くんVer1.1\n　　　　兎月くんVer1.1 学ラン無し\n　　　　兎月くんVer1.1 パンイチ\n\n・モデルfbxデータ\n\n・Textureファイル\n　　ﾃｸｽﾁｬ　2枚\n　　UV展開配置図　1枚\n\n\n\n\n\n利用規約\n\n1.本モデルの著作権は製作者に帰属します。\n\n2.改変前また改変後の本モデルの再配布を禁止します。\n\n3.本モデルを使用した一切の損害について製作者は責任を負いません。\n\n4.モデルの政治利用・差別的・侮辱的利用を禁止します。\n\n\n\n※購入した時点で本利用規約に同意したものとします。\n※利用規約が変更した場合は、最新物が適用されます。\n\n\n\n\n2019/5/19：リリース\n2020/1/4 ：Ver1.1　顔のサイズとバランスを修正,ﾃｸｽﾁｬ修正\n「にぼし」\n連絡先 twitter：@hutabosi777\n","url":"https://booth.pm/ja/items/1376862","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/f03af7d7-31bf-49c1-b051-6718e95e41e0/i/1376862/393869da-7a75-4df9-bc4b-0898802bbb0c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="dJoRjORd+i9HYyLFXlbR/PCQSOZjw1tsrukcpJuu0zg="></script>
+    nonce="QpumxvP5RaMMqfbWWK4zAEI4rZQ1mcooIYO8GmxXfCc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -615,7 +615,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
